@@ -80,6 +80,7 @@ async_result_callback_marshal(GObject *source_object,
 include
   gfile.override
   gfileenumerator.override
+  gfileinfo.override
   ginputstream.override
   goutputstream.override
   gvolumemonitor.override
